via Glitch - added faq page built to now.sh

--- a/now.json
+++ b/now.json
@@ -8,6 +8,7 @@
   "builds": [
     { "src": "index.js", "use": "@now/node" },
     { "src": "index.html", "use": "@now/static" },
+    { "src": "faq.html", "use": "@now/static" },
     { "src": "style.css", "use": "@now/static" }
 
   ]
