IndieCamp to TinyFactories

--- a/now.json
+++ b/now.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-    "name": "indie.camp",
+    "name": "tinyfactories",
   "alias": ["indie.camp"],
     "github": {
     "enabled": true
