--- a/now.json
+++ b/now.json
@@ -13,7 +13,6 @@
     { "src": "style.css", "use": "@now/static" },
     { "src": "opencall_style.css", "use": "@now/static" },
     { "src": "opencall.html", "use": "@now/static" },
-    { "src": "opencall_scroll.js", "use": "@now/node" }
-
+    { "src": "opencall_scroll.js", "use": "@now/static" }
   ]
 }
