--- a/now.json
+++ b/now.json
@@ -7,14 +7,14 @@
   },
   "builds": [
     { "src": "index.js", "use": "@now/node" },
-    { "src": "views/index.html", "use": "@now/static" },
-    { "src": "views/faq.html", "use": "@now/static" },
-    { "src": "views/projects.html", "use": "@now/static" },
-    { "src": "public/style.css", "use": "@now/static" },
-    { "src": "public/opencall_style.css", "use": "@now/static" },
-    { "src": "views/opencall.html", "use": "@now/static" },
-    { "src": "public/opencall_scroll.js", "use": "@now/static" },
-    { "src": "public/googleSheet.js", "use": "@now/static" }
+    { "src": "/views/index.html", "use": "@now/static" },
+    { "src": "/views/faq.html", "use": "@now/static" },
+    { "src": "/views/projects.html", "use": "@now/static" },
+    { "src": "/public/style.css", "use": "@now/static" },
+    { "src": "/public/opencall_style.css", "use": "@now/static" },
+    { "src": "/views/opencall.html", "use": "@now/static" },
+    { "src": "/public/opencall_scroll.js", "use": "@now/static" },
+    { "src": "/public/googleSheet.js", "use": "@now/static" }
   ],
   "routes": [
     {
