--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
-# Builds
+# Build Files
 _site/
 node_modules/
 package-lock.json
 
 
-#Software
+#Software Files
 
+##Glitch
 .editorconfig
 watch.json
+
+##IDEs
+.nova/
