--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "url": "git://github.com/11ty/eleventy-base-blog.git"
   },
   "author": {
-    "name": "Tiny Gardeners",
-    "email": "hello@tinyfactores.space",
-    "url": "https://tinyfactories.space"
+    "name": "Zach Leatherman",
+    "email": "zachleatherman@gmail.com",
+    "url": "https://zachleat.com/"
   },
   "license": "MIT",
   "bugs": {
@@ -27,7 +27,11 @@
     "@11ty/eleventy-navigation": "^0.1.3",
     "@11ty/eleventy-plugin-rss": "^1.0.7",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
+    "luxon": "^1.25.0",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.2.5"
+  },
+  "dependencies": {
+    "mongodb": "^3.6.2"
   }
 }
