--- a/_data/projects.json
+++ b/_data/projects.json
@@ -34,7 +34,7 @@
       "archiveUrl": "https://www.kickstarter.com/projects/1324099197/quickstarterbbcube-a-shouting-game-for-civilized-p?ref=nav_search&result=project&term=BBCubes",
       "isMaintained": "true"
     },
-    "createdBy": ["Weiwei", "Damon"],
+    "createdBy": ["Weiwei", "Diana", "Bill", "Damon"],
     "tags": ["one", "two"],
     "year": "2018"
   },
@@ -47,7 +47,7 @@
       "archiveUrl": "https://www.kickstarter.com/projects/weiweihsu/break-kickstarter-cyano-postcard?ref=user_menu",
       "isMaintained": "false"
     },
-    "createdBy": ["Weiwe", "Damon"],
+    "createdBy": ["Weiwei", "Damon"],
     "tags": ["one", "two"],
     "year": "2019"
   },
