Updated with correct names

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,5 @@
 # These are supported funding model platforms
-open_collective: 11ty
+
+github: [gndclouds, weiweihsu, kihapper]
+ko_fi: tiny_factories
+liberapay: tiny_factories
