--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "markdown-it-anchor": "^5.2.5"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "mongodb": "^3.6.2"
+    "dotenv": "^10.0.0",
+    "mongodb": "^4.1.1",
+    "@notionhq/client": "^0.3.2"
   }
 }
