--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "markdown-it-anchor": "^5.2.5"
   },
   "dependencies": {
+    "@11ty/eleventy-cache-assets": "^2.3.0",
+    "@notionhq/client": "^0.4.0",
     "dotenv": "^8.2.0",
     "mongodb": "^3.6.2"
   }
