--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "url": "git://github.com/11ty/eleventy-base-blog.git"
   },
   "author": {
-    "name": "Zach Leatherman",
-    "email": "zachleatherman@gmail.com",
-    "url": "https://zachleat.com/"
+    "name": "Tiny Factories Team",
+    "email": "hello@tinyfactories.space",
+    "url": "https://tinyfactories.space/"
   },
   "license": "MIT",
   "bugs": {
@@ -33,8 +33,10 @@
   },
   "dependencies": {
     "@11ty/eleventy-cache-assets": "^2.3.0",
+    "@11ty/eleventy-img": "^1.0.0",
     "@notionhq/client": "^0.4.0",
     "dotenv": "^8.2.0",
-    "mongodb": "^3.6.2"
+    "mongodb": "^3.6.2",
+    "sharp": "^0.29.3"
   }
 }
